stopped user handle from overflowing from its boundaries in user card

--- a/src/components/user_card/user_card.scss
+++ b/src/components/user_card/user_card.scss
@@ -194,6 +194,7 @@
 
     .user-screen-name {
       min-width: 1px;
+      max-width: 100%;
       text-overflow: ellipsis;
       overflow: hidden;
       color: $fallback--lightText;
